--- a/App/Admin/Resources/Views/settings_danger_zone.phtml
+++ b/App/Admin/Resources/Views/settings_danger_zone.phtml
@@ -44,7 +44,9 @@
                                     </td>
                                 </tr>
                             <?php }
-                                }
+                                } else { ?>
+                                    <p>Aucun contenu n'est créé pour le moment, il n'y a donc rien, à supprimer.</p>
+                        <?php  }
                             }   ?>
                             </tbody>
                         </table>
