create-user-settings-conf-installation: generate user configuration files and add User menu entry from the installation. Add style in BO

--- a/App/Admin/Resources/Views/block__admin_head.phtml
+++ b/App/Admin/Resources/Views/block__admin_head.phtml
@@ -3,4 +3,6 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="/public/main.css">
     <link rel="icon" href="/public/favicon/favicon.ico">
+    <!-- FONT AWESOME -->
+    <script src="https://kit.fontawesome.com/4281e8c561.js" crossorigin="anonymous"></script>
 </head>
