--- a/App/Admin/Resources/Views/block__admin_header.phtml
+++ b/App/Admin/Resources/Views/block__admin_header.phtml
@@ -11,14 +11,14 @@
     <?php } ?>
     <div class="header-content">
         <div class="header-welcome">
-            <h1>- Portfolio 3WAcademy -</h1>
-            <p>Administration</p>
+            <h1>Portfolio 3WAcademy</h1>
+            <h2>Administration</h2>
         </div>
 
         <div class="adminLogout">
-            <a href="/admin/admin/home" title="admin_home">Admin home</a>
-            <a href="/admin/login/logout" title="logout">Deconnexion</a>
-            <a href="/" title="logout">Aller au sur le Front</a>
+            <a href="/admin/admin/home" title="admin_home"><i class="fas fa-home"></i> Admin home</a>
+            <a href="/admin/login/logout" title="logout"><i class="fas fa-power-off"></i> Deconnexion</a>
+            <a href="/" title="to_front"><i class="fas fa-globe-europe"></i> Aller au sur le Front</a>
         </div>
     </div>
 </header>
