--- a/App/Assets/scss/_adminForm.scss
+++ b/App/Assets/scss/_adminForm.scss
@@ -8,7 +8,6 @@
   padding: 1rem 2%;
 
   label{
-    //width: 30%;
     display: inline-block;
   }
   input[type='text']{
@@ -28,57 +27,16 @@
     display: block;
     margin: 3rem 1% 0 auto;
     padding: 1rem 2%;
-    background-color: orange;
+    background-color: $text_primary;
     color: white;
     min-width: 150px;
-    border: solid 2px orange;
+    border: solid 2px $text_primary;
     transition: 0.4s ease;
     border-radius: 5px;
     &:hover{
       background-color: white;
-      color: orange;
+      color: $text_primary;
 
     }
   }
-}
-.admin-content-widget {
-
-  display: inline-block;
-  width: 40%;
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    thead {
-      td {
-
-        width: 30%;
-      }
-    }
-
-  tbody {
-
-      tr:nth-child(even){
-          background-color: burlywood;
-        }
-      tr:nth-child(odd) {
-          background-color: bisque;
-        }
-      tr{
-        &:hover{
-          opacity: 0.4;
-        }
-        td {
-          padding: 0.5rem 2%;
-
-          a {
-            display: block;
-            color: $midnight-blue;
-            width: 100%;
-            cursor: pointer;
-          }
-        }
-      }
-    }
-  }
-
 }
