--- a/App/web/public/main.css
+++ b/App/web/public/main.css
@@ -384,6 +384,7 @@ template {
 .adminLogout a {
   font-size: 1.8rem;
   display: block;
+  width: 15%;
   margin: 0.7rem 1%;
   transition-duration: 0.3s;
   transition-timing-function: ease; }
