add-style-in-admin: add lot of style in admin section, add little fixes : - danger zone redirection after delete - display legend on admin form - content type deletion in configuration list

--- a/App/Admin/Resources/Views/handle_content_index.phtml
+++ b/App/Admin/Resources/Views/handle_content_index.phtml
@@ -36,8 +36,10 @@
                         foreach ($this->vars['options']['list'] as $item) { ?>
                             <tr>
                                 <?php foreach ($item as $key => $value) {
-
+                                    // limit sting length for table display
+                                    $value = strlen($value) > 50 ? substr($value, 0, 40) . '...' : $value;
                                     if ($key === 'id') {
+
                                         $id = $value;
                                     }
                                     elseif($key === 'password'){
