--- a/App/Assets/scss/main.scss
+++ b/App/Assets/scss/main.scss
@@ -12,6 +12,7 @@ $warning: darkorange;
 @import "_adminHome";
 @import "_adminForm";
 @import "_adminIndexTable";
+@import "_projectInstallation";
 
 
 /* GENERAL */
