--- a/App/Admin/Resources/Views/installation_form.phtml
+++ b/App/Admin/Resources/Views/installation_form.phtml
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="/public/main.css">
+<?php include("block__admin_head.phtml"); ?>
 
-</head>
-<body>
+<body class="wrapper-installation">
+<header>
 <?php
 if (!empty($this->vars['options']['flash-message'])) { ?>
     <div class="flash-message <?= $this->vars['options']['flash-message']['type-class'] ?>">
@@ -14,26 +11,24 @@ if (!empty($this->vars['options']['flash-message'])) { ?>
     </div>
 <?php } ?>
 <h1>Installation du projet</h1>
-<form action="/admin/install/startInstall" method="post">
-    <h2 style="color:#900;">Installation du projet</h2>
+</header>
+<form class="installation-form" action="/admin/install/startInstall" method="post">
     <fieldset>
         <legend>
             Compte Administrateur
         </legend>
-        <div>
+        <div class="admin-form-field">
             <label for="email">Email</label>
             <input id="email" name="email" type="text" value="<?= (empty($_POST['email']) ? '' : $_POST['email']) ?>"
                    required/>
-            <p>NOTA : Ce champ est indispensable pour la suite de l'inatallation, il vous permettra d'obtenir le token
-                servant à récupérer le contenu du projet en local via l'API</p>
 
         </div>
-        <div>
+        <div class="admin-form-field">
             <label for="login">Login</label>
             <input id="login" name="login" type="text" value="<?= (empty($_POST['login']) ? '' : $_POST['login']) ?>"
                    required/>
         </div>
-        <div>
+        <div class="admin-form-field">
             <label for="pwd"">Mot de passe</label>
             <input id="pwd" name="pwd" type="password" value="<?= (empty($_POST['pwd']) ? '' : $_POST['pwd']) ?>"
                    required/>
@@ -44,28 +39,28 @@ if (!empty($this->vars['options']['flash-message'])) { ?>
         <legend>
             Informations base de données
         </legend>
-        <div>
+        <div class="admin-form-field">
             <label for="db_name">Nom de la base de donnée</label>
             <input id="db_name" name="db_name" type="text" value="<?= (empty($_POST['name']) ? '' : $_POST['name']) ?>"
                    required/>
         </div>
-        <div>
+        <div class="admin-form-field">
             <label for="db_host">Host</label>
             <input id="db_host" name="db_host" type="text" value="<?= (empty($_POST['host']) ? '' : $_POST['host']) ?>"
                    required/>
         </div>
-        <div>
+        <div class="admin-form-field">
             <label for="db_admin">Admin</label>
             <input id="db_admin" name="db_admin" type="text"
                    value="<?= (empty($_POST['admin']) ? '' : $_POST['admin']) ?>" required/>
         </div>
-        <div>
+        <div class="admin-form-field">
             <label for="db_password">Mot de passe</label>
             <input id="db_password" name="db_password" type="password"
                    value="<?= (empty($_POST['password']) ? '' : $_POST['password']) ?>"/>
         </div>
         <input type="hidden" name="private" value="true">
-        <button type="submit">Installer</button>
+        <button class="form-btn-submit" type="submit">Installer</button>
     </fieldset>
 </form>
 </body>
