--- a/App/Assets/scss/_adminHome.scss
+++ b/App/Assets/scss/_adminHome.scss
@@ -9,17 +9,7 @@
       width: 100%;
       text-align: center;
       h1{
-        color: $text_primary;
-        display: inline-block;
-        &::before, &::after{
-          content:"\f7a4";
-          text-align: center;
-          font-family: FontAwesome;
-          margin: 0 15px;
-          width: 40px;
-          height: 20px;
-          display: inline-block;
-        }
+      @include admin_main_title();
       }
       h2{
         color: $text_primary;
