--- a/App/Front/Resources/Views/block__head_front.phtml
+++ b/App/Front/Resources/Views/block__head_front.phtml
@@ -1,7 +1,6 @@
 <head>
     <meta charset="UTF-8">
-    <title><?= ucfirst($datas['header']['site_sub_title']['content']) .
-            ' ' . $datas['site_title']['content'] ?></title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="/public/main.css">
     <link rel="icon" href="/public/favicon/favicon.ico">
     <!-- FONT AWESOME -->
