--- a/App/Front/Resources/Views/404.phtml
+++ b/App/Front/Resources/Views/404.phtml
@@ -1,2 +1,3 @@
-<h1>404</h1>
+<h1 style="color:#900; font-size: 24em">404</h1>
 <p>Cette page n'existe pas...</p>
+<a href="/front/index/index">Retour à l'accueil</a>
